--- a/bogenliga/src/app/modules/login/components/login/login.component.scss
+++ b/bogenliga/src/app/modules/login/components/login/login.component.scss
@@ -3,47 +3,6 @@
   display: flex;
   justify-content: center;
 }
-
-/* Bordered form */
-form {
-  border: 3px solid #f1f1f1;
-  max-width: 600px;
-
-}
-
-/* Full-width inputs */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-
-/* Set a style for all buttons */
-.button-login {
-  background-color: #02bdd5;//#4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-/* Add a hover effect for buttons */
-.button-login:hover {
-  opacity: 0.8;
-}
-
-/* Extra style for the cancel button (red) */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  //background-color: #f44336;
-}
-
 /* Center the avatar image inside this container */
 .imgcontainer {
   text-align: center;
@@ -54,15 +13,4 @@ input[type=text], input[type=password] {
 img.avatar {
   width: 40%;
   border-radius: 50%;
-}
-
-/* Add padding to containers */
-.container {
-  padding: 16px;
-}
-
-/* The "Forgot password" text */
-span.psw {
-  float: right;
-  padding-top: 16px;
 }
